test/error/LexResourceSyntax2.ci
public static class Test
{
	public static bool Run()
	{
		byte[] a = resource<int[]>("foo"); //ERROR: Expected resource<byte[]>
		return true;
	}
}
